[package]
name = "route_rs"
version = "0.2.0"
edition = "2024"
description = "A cli tool for muskingum-cunge routing in ngiab"
license = "AGPL-3.0"

[build-dependencies]
anyhow = "*"

[[bin]]
name = "force-build"
path = "build.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "string"] }
csv = "1.3.1"
indicatif = "0.17.11"
netcdf = "0.11.0"
num_cpus = "1.16.0"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }

burn = { version = "0.18.0", features = ["candle", "ndarray"] }
serde_json = "1.0.145"
glob = "0.3.3"
serde_yaml = "0.9.34"
burn-import = "0.18.0"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
