[package]
name = "route_rs"
version = "0.2.0"
edition = "2024"
description = "A cli tool for muskingum-cunge routing in ngiab"
license = "AGPL-3.0"

[build-dependencies]
anyhow = "*"

[[bin]]
name = "force-build"
path = "build.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "string"] }
csv = "1.3.1"
indicatif = "0.17.11"
netcdf = "0.11.0"
num_cpus = "1.16.0"
rusqlite = "0.35.0"
serde = "1.0.219"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
