[package]
name = "rs_route"
version = "0.3.1"
edition = "2024"
description = "A cli tool for muskingum-cunge routing in ngiab"
license = "MIT"

[build-dependencies]
anyhow = "1.0.98"

[[bin]]
name = "rs-route"
path = "src/main.rs"

[features]
static = ["netcdf/static", "rusqlite/bundled"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["color", "derive", "string"] }
colored = "3.1.1"
csv = "1.3.1"
indicatif = "0.17.11"
netcdf = "0.11.0"
num_cpus = "1.16.0"
rusqlite = "0.35.0"
serde = "1.0.219"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
